--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -12,6 +12,13 @@
                     </div>
                 </div>
 
+                <!-- If no products -->
+                <div *ngIf="products?.length == 0"
+                     class="alert alert-warning col-md-12"
+                     role="alert">
+                    No products found.
+                </div>
+
             </div>
         </div>
     </div>
