--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -2,11 +2,18 @@
     <div class="section-content section-content-p30">
         <div class="container-fluid">
             <div class="row">
-
+                <!-- products -->
                 <div *ngFor="let product of products" class="col-md-3">
                     <div class="product-box">
-                        <img src="{{ product.imageUrl}}" class="img-responsive"/>
-                        <h1>{{ product.name }}</h1>
+
+                        <a routerLink="/products/{{product.id}}">
+                            <img src="{{ product.imageUrl}}" class="img-responsive"/>
+                        </a>
+
+                        <a routerLink="/products/{{product.id}}">
+                            <h1>{{ product.name }}</h1>
+                        </a>
+
                         <div class="price">{{ product.unitPrice | currency:'RON'}}</div>
                         <a href="#" class="primary-btn">Add to cart</a>
                     </div>
@@ -20,6 +27,45 @@
                 </div>
 
             </div>
+
+            <!-- pagination -->
+            <div class="footer-pagination">
+                <div class="row">
+                    <div class="col-md-6"></div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-9" style="padding-left: 30%">
+
+                                <ngb-pagination
+                                    [(page)]="pageNumber"
+                                    [pageSize]="pageSize"
+                                    [collectionSize]="totalElements"
+                                    [maxSize]="5"
+                                    [boundaryLinks]="true"
+                                    (pageChange)="listProducts()">
+                                </ngb-pagination>
+
+                            </div>
+
+                            <div>
+                                <div class="col-md-3 mt-2"
+                                     style="text-align: right">
+                                    <span class="mr-2">Page Size</span>
+                                    <select (change)="updatePageSize($event)">
+                                        <option>2</option>
+                                        <option selected="true">5</option>
+                                        <option>10</option>
+                                        <option>20</option>
+                                        <option>50</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
