--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -6,7 +6,10 @@
         <div class="price">
             {{ product.unitPrice | currency: 'RON' }}
         </div>
-        <a href="#" class="primary-btn">Add to cart</a>
+        <button (click)="addToCart()"
+                class="btn btn-primary btn-sm">
+            Add to cart
+        </button>
         <hr>
         <h4>Description</h4>
         <p>{{ product.description }}</p>
