--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -15,7 +15,10 @@
                         </a>
 
                         <div class="price">{{ product.unitPrice | currency:'RON'}}</div>
-                        <a href="#" class="primary-btn">Add to cart</a>
+                        <button class="btn btn-primary btn-sm"
+                                (click)="addToCart(product)">
+                            Add to cart
+                        </button>
                     </div>
                 </div>
 
