--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -65,6 +65,10 @@
                             <p>Total Quantity: {{ totalQuantity }}</p>
                             <p>Shipping: FREE</p>
                             <p>Total Price: {{ totalPrice | currency: 'RON' }}</p>
+                            <a routerLink="/checkout"
+                               class="btn btn-primary">
+                                Checkout
+                            </a>
                         </td>
                     </tr>
                 </table>
