--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -14,6 +14,16 @@
                          <div class="col-md-9">
                              <div class="input-space">
                                  <input formControlName="firstName" type="text"/>
+                                 <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
+                                      class="alert alert-danger">
+                                     <div *ngIf="firstName.errors['required'] ||
+                                                 firstName.errors['notOnlyWhitespace']">
+                                        First Name is required
+                                     </div>
+                                     <div *ngIf="firstName.errors['minlength']">
+                                         First Name must be at least 2 characters long
+                                     </div>
+                                 </div>
                              </div>
                          </div>
                      </div>
@@ -24,6 +34,16 @@
                          <div class="col-md-9">
                              <div class="input-space">
                                  <input formControlName="lastName" type="text"/>
+                                 <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
+                                      class="alert alert-danger">
+                                     <div *ngIf="lastName.errors['required'] ||
+                                                 lastName.errors['notOnlyWhitespace']">
+                                         Last Name is required
+                                     </div>
+                                     <div *ngIf="lastName.errors['minlength']">
+                                         Last Name must be at least 2 characters long
+                                     </div>
+                                 </div>
                              </div>
                          </div>
                      </div>
@@ -34,6 +54,15 @@
                          <div class="col-md-9">
                              <div class="input-space">
                                  <input formControlName="email" type="text"/>
+                                 <div *ngIf="email.invalid && (email.dirty || email.touched)"
+                                      class="alert alert-danger">
+                                     <div *ngIf="email.errors['required']">
+                                         Email is required
+                                     </div>
+                                     <div *ngIf="email.errors['pattern']">
+                                         Email id not valid
+                                     </div>
+                                 </div>
                              </div>
                          </div>
                      </div>
@@ -56,6 +85,12 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+                                <div *ngIf="shippingCountry.invalid && (shippingCountry.dirty || shippingCountry.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="shippingCountry.errors['required']">
+                                        Country is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -66,6 +101,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text"/>
+                                <div *ngIf="shippingStreet.invalid && (shippingStreet.dirty || shippingStreet.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="shippingStreet.errors['required'] || shippingStreet.errors['notOnlyWhitespace']">
+                                        Street is required
+                                    </div>
+                                    <div *ngIf="shippingStreet.errors['minlength']">
+                                        Street should be at least 2 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -76,6 +120,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text"/>
+                                <div *ngIf="shippingCity.invalid && (shippingCity.dirty || shippingCity.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="shippingCity.errors['required'] || shippingCity.errors['notOnlyWhitespace']">
+                                        City is required
+                                    </div>
+                                    <div *ngIf="shippingCity.errors['minlength']">
+                                        City should be at least 2 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -91,6 +144,12 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+                                <div *ngIf="shippingState.invalid && (shippingState.dirty || shippingState.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="shippingState.errors['required']">
+                                        State is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -101,6 +160,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text"/>
+                                <div *ngIf="shippingZipCode.invalid && (shippingZipCode.dirty || shippingZipCode.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="shippingZipCode.errors['required'] || shippingZipCode.errors['notOnlyWhitespace']">
+                                        ZipCode is required
+                                    </div>
+                                    <div *ngIf="shippingZipCode.errors['minlength'] || shippingZipCode.errors['maxlength']">
+                                        Zip code should be 6 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -133,6 +201,12 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+                                <div *ngIf="billingCountry.invalid && (billingCountry.touched || billingCountry.dirty)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="billingCountry.errors['required']">
+                                        Country is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -143,6 +217,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="street" type="text"/>
+                                <div *ngIf="billingStreet.invalid && (billingStreet.dirty || billingStreet.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="billingStreet.errors['required'] || billingStreet.errors['notOnlyWhitespace']">
+                                        Street is required
+                                    </div>
+                                    <div *ngIf="billingStreet.errors['minlength']">
+                                        Street should be at least 2 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -153,6 +236,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="city" type="text"/>
+                                <div *ngIf="billingCity.invalid && (billingCity.dirty || billingCity.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="billingCity.errors['required'] || billingCity.errors['notOnlyWhitespace']">
+                                        City is required
+                                    </div>
+                                    <div *ngIf="billingCity.errors['minlength']">
+                                        City should be at least 2 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -168,6 +260,12 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+                                <div *ngIf="billingState.invalid && (billingState.dirty || billingState.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="billingState.errors['required']">
+                                        State is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -178,6 +276,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="zipCode" type="text"/>
+                                <div *ngIf="billingZipCode.invalid && (billingZipCode.dirty || billingZipCode.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="billingZipCode.errors['required'] || billingZipCode.errors['notOnlyWhitespace']">
+                                        Zip Code is required
+                                    </div>
+                                    <div *ngIf="billingZipCode.errors['minlength'] || billingZipCode.errors['maxlength']">
+                                        Zip Code should be 6 digits
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -197,6 +304,12 @@
                                     <option>VISA</option>
                                     <option>Mastercard</option>
                                 </select>
+                                <div *ngIf="cardType.invalid && (cardType.dirty || cardType.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="cardType.errors['required']">
+                                        Card Type is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -207,6 +320,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="nameOnCard" type="text"/>
+                                <div *ngIf="nameOnCard.invalid && (nameOnCard.dirty || nameOnCard.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="nameOnCard.errors['required'] || nameOnCard.errors['notOnlyWhitespace']">
+                                        Name on card is required
+                                    </div>
+                                    <div *ngIf="nameOnCard.errors['minlength']">
+                                        Name on card should by at least 2 characters
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -217,6 +339,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="cardNumber" type="text"/>
+                                <div *ngIf="cardNumber.invalid && (cardNumber.dirty || cardNumber.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="cardNumber.errors['required'] || cardNumber.errors['notOnlyWhitespace']">
+                                        Card number is required
+                                    </div>
+                                    <div *ngIf="cardNumber.errors['minlength'] || cardNumber.errors['maxlength']">
+                                        Car number is invalid
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -227,6 +358,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="securityCode" type="text"/>
+                                <div *ngIf="securityCode.invalid && (securityCode.dirty || securityCode.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="securityCode.errors['required'] || securityCode.errors['notOnlyWhitespace']">
+                                        Security code is required
+                                    </div>
+                                    <div *ngIf="securityCode.errors['minlength'] || securityCode.errors['maxlength']">
+                                        Security code is invalid
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -241,6 +381,12 @@
                                         {{ month }}
                                     </option>
                                 </select>
+                                <div *ngIf="expirationMonth.invalid && (expirationMonth.dirty || expirationMonth.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="expirationMonth.errors['required']">
+                                        Expiration Month is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -256,6 +402,12 @@
                                         {{ year }}
                                     </option>
                                 </select>
+                                <div *ngIf="expirationYear.invalid && (expirationYear.dirty || expirationYear.touched)"
+                                     class="alert alert-danger">
+                                    <div *ngIf="expirationYear.errors['required']">
+                                        Expiration Year is required
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
